# mba-scraper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  ipython_startup.py  justfile  lambda_function.py  pyproject.toml  singing_crazy_frogs.ics  singing_frogs.ics  template.yaml
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: conventional-commit-pr-name.yml  lint-and-test.yml
mba_scraper/: calendar_scraping.py  lambda_function.py
src/: calendar_scraping.py  game_event.py  lambda_function.py
tests/: conftest.py  test_lambda_function.py  test_lectures_filter.py
