[project]
name = "mba-scraper"
version = "0.0.0"  # This is a placeholder, version is determined by git tag and commits
description = "AWS Lambda code that scrapes schedule from MBA League website and returns .ics calendar with games."
authors = [{ name = "Piotr Karaś", email = "pepe500p@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "aws-lambda-powertools>=3.16.0,<4",
    "beautifulsoup4>=4.14.3",
    "icalendar>=6.3.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "copier>=9.11.3,<10",
    "fawltydeps>=0.20.0,<1.0.0",
    "ipython>=9.9.0,<10",
    "mypy>=1.19.1,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pytest>=9.0.2,<10",
    "ruff>=0.14.14,<0.15.0",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
#  See https://docs.astral.sh/ruff/rules/ for more information.
select = [
    "PT",   # flake8-pytest-style
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "I",    # isort
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "N",    # pep8-naming
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # pyflakes
    ]
ignore = ["S101", "A003", "B904", "N818", "COM812"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.isort]
order-by-type = false
known-first-party = ["mba_scraper"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError()",
]

[tool.fawltydeps]
code = ["mba_scraper"]
deps = ["pyproject.toml"]
ignore_unused = [
    "lxml",

    # Dev dependencies. This list should contain ALL of them!
    "copier",
    "fawltydeps",
    "ipython",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    "ruff",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = "misc"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = "tests"
addopts = "--strict-markers -p no:warnings --cov=mba_scraper --cov-fail-under=70"
